Convert panels to flex-box

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 .panels {
   min-height:100vh;
   overflow: hidden;
+  display: flex;
 }
 
 .panel {
@@ -32,6 +33,7 @@ body {
   font-size: 20px;
   background-size:cover;
   background-position:center;
+  flex: 1;
 }
 
 
