--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,9 @@ body {
   background-size:cover;
   background-position:center;
   flex: 1;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 
