--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body {
   justify-content: center;
   align-items: center;
   display: flex;
+  flex-direction: column;
 }
 
 
@@ -50,7 +51,14 @@ body {
   margin:0;
   width: 100%;
   transition:transform 0.5s;
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.panel > *:first-child { transform: translateY(-100%); }
+.panel > *:last-child { transform: translateY(100%); }
 
 .panel p {
   text-transform: uppercase;
